Fix safari image overflow

--- a/components/WorkBlock/WorkBlock.module.css
+++ b/components/WorkBlock/WorkBlock.module.css
@@ -10,15 +10,14 @@
   display: block;
   margin: 0 1rem 0 0;
   max-width: 387px;
-  width: 50%;
   min-width: 250px;
+  flex-basis: 50%;
 }
 
 .image {
   box-shadow: 2px 2px 4px #4D4D4D;
   border-radius: 2px;
-  max-width: 387px;
-  min-width: 250px;
+  max-width: 100%;
   margin: 0;
 }
 
